# shiftee_analysis

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DISTRIBUTION_README.md  Dockerfile  README.md  build.bat  build.ps1  build_windows.bat  build_windows.sh  pyproject.toml  pytest.ini  requirements.txt  run_analysis.sh  setup.py  shiftee.spec  shiftee_analysis.py
.github/workflows/: build-windows.yml
config/: settings.example.toml
docs/: CLI_USAGE.md  COMPLETION_SUMMARY.md  KAKAO_SETUP.md  To_do_list1.md  calculation_formulas.md  column_mapping_analysis.md  login.md
docs/archive/: Implementation_Plan_Calculation.md  To_do_list.md  To_do_list_antigravity.md  tasks.md
infra/: template.yaml
kakao_send/: __init__.py  kakao_refresh_token.py  kakao_token.json  kakao_token.json.example
scripts/: auto_analyze_and_notify.sh  calculate_risk_direct.py  compare_outputs.py  debug_employee.py  deploy.sh  monthly_report.sh  setup-aws.sh  setup-secrets.sh  verify_excel_compatibility.py
src/kakao_send/: README.md  kakao_get_token.py  kakao_refresh_token.py  kakao_token.json  message_formatter.py
src/shiftee/: __init__.py  __main__.py  attendance.py  cli.py  gui_login.py  gui_main.py  html_report.py  kakao_lambda.py  lambda_handler.py  login.py  settings.py
src/shiftee/archive/: calculator.py  cli.py  excel_processor.py  report_generator.py  risk_analysis.py  template.py  validator.py  workflow.py
src/slack_send/: __init__.py  message_formatter.py  webhook.py
tests/: __init__.py
