[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shiftee-analysis"
version = "1.0.3"
description = "Shiftee 근무 데이터 분석 및 초과근로 적정성 판정 도구"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Shiftee Analysis Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.4",
    "pydantic-settings>=2.2",
    "playwright>=1.40",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "python-dateutil>=2.8.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

lambda = ["boto3>=1.28", "awslambdaric>=2.0"]

[project.scripts]
shiftee-analyze = "shiftee.cli:main"
shiftee-gui = "shiftee.gui_main:main"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
